[package]
name = "mazegen"
version = "0.1.0"
authors = ["Paul.Helly <Paul.Helly@bentley.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_pcg = "0.3.0"
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.67.0"
piston2d-opengl_graphics = "0.76.0"

